[metadata]
name = googledrive
version = attr: googledrive.__version__
url = https://github.com/skitschy/pyGoogleDrive
author = skitschy
author_email = 's1kitschy@gmail.com'
license = MIT
description = Simple Google Drive API wrapper
long_description = file: README.md
long_description_content_type = text/markdown
keywords = google drive
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
project_urls =
    Documentation = https://pygoogledrive.readthedocs.io/
    Source = https://github.com/skitschy/pyGoogleDrive

[options]
py_modules = googledrive
python_requires = >=2.7, !=3.0.*
install_requires =
    google-api-python-client
